--- a/angular.json
+++ b/angular.json
@@ -11,7 +11,6 @@
       "prefix": "app",
       "architect": {
         "build": {
-          
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "dist/sairyo-redifined",
@@ -148,5 +147,8 @@
     "@schematics/angular:component": {
       "styleext": "scss"
     }
+  },
+  "cli": {
+    "analytics": "8c73eb2e-bac6-4a02-9890-cddc65c193da"
   }
 }
