package  outdated resolved

--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "@ng-bootstrap/ng-bootstrap": "^6.0.3",
     "@ng-select/ng-option-highlight": "0.0.4",
     "@ng-select/ng-select": "^4.0.0",
-    "@zoomus/websdk": "^1.7.5",
-    "angularx-social-login": "^2.2.1",
+    "@zoomus/websdk": "^1.7.6",
+    "angularx-social-login": "^2.3.0",
     "auth0-js": "^9.13.2",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
@@ -46,7 +46,7 @@
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "rxjs": "^6.5.5",
+    "rxjs": "~6.5.5",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2",
     "zoomus": "^0.1.4",
@@ -57,9 +57,9 @@
     "@angular/cli": "~9.0.6",
     "@angular/compiler-cli": "~9.0.6",
     "@angular/language-service": "~9.0.6",
+    "@types/node": "^12.12.37",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.12.36",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -68,7 +68,7 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "protractor": "^5.4.4",
+    "protractor": "~5.4.4",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
     "typescript": "~3.7.5"
